test_out.txt
cargo : warning: unused imports: `debug` and `trace`
At line:1 char:1
+ cargo test -q strategy::apex::tests 2>&1 | Out-File -FilePath test_ou ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused...ug` and `trace`:S 
   tring) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  --> src\risk\hedge_monitor.rs:14:15
   |
14 | use tracing::{debug, error, info, trace, warn};
   |               ^^^^^               ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `debug`
 --> src\risk\positions.rs:5:15
  |
5 | use tracing::{debug, info, trace};
  |               ^^^^^

warning: unused import: `rust_decimal_macros::dec`
 --> src\strategy\action_executor.rs:8:5
  |
8 | use rust_decimal_macros::dec;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `polymarket_client_sdk::types::U256`
  --> src\strategy\mm.rs:13:5
   |
13 | use polymarket_client_sdk::types::U256;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `debug`
  --> src\strategy\apex.rs:14:15
   |
14 | use tracing::{debug, info, warn};
   |               ^^^^^

warning: variable does not need to be mutable
   --> src\strategy\apex.rs:309:14
    |
309 |         let (mut yes_bid, mut no_bid, mut can_bid_yes, mut can_bid_no) = 
self.calculate_quotes(
    |              ----^^^^^^^
    |              |
    |              help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\strategy\apex.rs:309:27
    |
309 |         let (mut yes_bid, mut no_bid, mut can_bid_yes, mut can_bid_no) = 
self.calculate_quotes(
    |                           ----^^^^^^
    |                           |
    |                           help: remove this `mut`

warning: variable does not need to be mutable
   --> src\strategy\apex.rs:309:39
    |
309 |         let (mut yes_bid, mut no_bid, mut can_bid_yes, mut can_bid_no) = 
self.calculate_quotes(
    |                                       ----^^^^^^^^^^^
    |                                       |
    |                                       help: remove this `mut`

warning: variable does not need to be mutable
   --> src\strategy\apex.rs:309:56
    |
309 |         let (mut yes_bid, mut no_bid, mut can_bid_yes, mut can_bid_no) = 
self.calculate_quotes(
    |                                                        ----^^^^^^^^^^
    |                                                        |
    |                                                        help: remove this 
`mut`

error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as 
mutable
   --> src\strategy\apex.rs:309:74
    |
291 |         let state = self.markets.entry(market_key.clone()).or_default();
    |                     ------------ mutable borrow occurs here
...
309 |         let (mut yes_bid, mut no_bid, mut can_bid_yes, mut can_bid_no) = 
self.calculate_quotes(
    |                                                                          
^^^^ immutable borrow occurs here
310 |             phase,
311 |             state,
    |             ----- mutable borrow later used here

warning: unused variable: `yes_final_size`
  --> src\monitor\arbitrage.rs:81:9
   |
81 |         yes_final_size: Decimal,
   |         ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_yes_final_size`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `no_final_size`
  --> src\monitor\arbitrage.rs:82:9
   |
82 |         no_final_size: Decimal,
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_no_final_size`

warning: unused variable: `yes_price`
  --> src\risk\manager.rs:76:9
   |
76 |         yes_price: Decimal,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_yes_price`

warning: unused variable: `no_price`
  --> src\risk\manager.rs:77:9
   |
77 |         no_price: Decimal,
   |         ^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_no_price`

warning: unused variable: `yes_bid`
   --> src\strategy\apex.rs:530:14
    |
530 |         let (yes_bid, no_bid, can_bid_yes, can_bid_no) = 
strategy.calculate_quotes(
    |              ^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_yes_bid`

For more information about this error, try `rustc --explain E0502`.
error: could not compile `poly_5min_bot` (bin "poly_5min_bot" test) due to 1 
previous error; 14 warnings emitted
